--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
 [submodule "vim-colors-solarized"]
-	path = vim-colors-solarized
+	path = bundle/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
